# MyBids

./: .gitignore  LICENSE  README.md  dataset_description.json
code/MyBidsApp/bids_cli_hub/: __init__.py  pyproject.toml
code/MyBidsApp/bids_cli_hub/bids_cli_hub/: __init__.py  _cbrain_wrapper.py  main.py
code/MyBidsApp/bidscomatic/: README.md  __init__.py  pyproject.toml
code/MyBidsApp/bidscomatic/bidscomatic/: __init__.py  __main__.py  _init_dataset.py  models.py
code/MyBidsApp/bidscomatic/bidscomatic/cli/: __init__.py  __main__.py  bids.py  convert.py  dataset_description.py  events.py  fsl.py  init.py  participants.py  phenotype_json.py  preprocess.py  qc.py  questionnaires.py  unzip.py  validate.py
code/MyBidsApp/bidscomatic/bidscomatic/config/: __init__.py  loader.py  pepolar.py  schema.py
code/MyBidsApp/bidscomatic/bidscomatic/engines/: __init__.py  base.py  docker.py  slurm.py
code/MyBidsApp/bidscomatic/bidscomatic/io/: __init__.py  dcm2niix.py
code/MyBidsApp/bidscomatic/bidscomatic/pipelines/: __init__.py  _entities.py  _meta.py  _selection.py  anatomical.py  convert.py  diffusion.py  discovery.py  fieldmap.py  functional.py  mcflirt.py  pepolar.py  types.py  unzip.py
code/MyBidsApp/bidscomatic/bidscomatic/qc/: __init__.py  discover.py  display.py  metrics.py  report.py
code/MyBidsApp/bidscomatic/bidscomatic/resources/: __init__.py  default_files.yaml  default_series.yaml  events_template.yaml  qc.yaml
code/MyBidsApp/bidscomatic/bidscomatic/templates/: dataset_description.json.j2
code/MyBidsApp/bidscomatic/bidscomatic/tools/: __init__.py  aroma.py  base.py  epi_mask.py  fmriprep.py  fsl.py  mcflirt.py
code/MyBidsApp/bidscomatic/bidscomatic/utils/: __init__.py  archive.py  cleanup.py  display.py  docker.py  errors.py  events.py  events_config.py  events_json.py  filters.py  fsl.py  logging.py  mask.py  motion.py  naming.py  ops.py  participants.py  paths.py  phenotype_json.py  qa.py  questionnaires.py  resources.py  slug.py  stats.py  stimuli.py  validator.py
code/MyBidsApp/bidscomatic/tests/: __init__.py  _mcflirt.py  conftest.py  pytest.ini  test_anatomical.py  test_cli_fsl_mcflirt.py  test_cli_preprocess.py  test_cli_preprocess_epi_mask.py  test_cli_preprocess_fmriprep.py  test_config.py  test_dataset_description_cli.py  test_engine_slurm.py  test_events_cli.py  test_events_cli_config.py  test_events_cli_config_assocmemory.py  test_events_cli_config_filters.py  test_events_cli_config_full.py  test_events_cli_dir_tag.py  test_events_cli_full_pipeline.py  test_events_cli_instruction_rows.py  test_events_config_template.py  test_events_json_meta.py  test_events_ops_basic.py  test_events_ops_integration.py  test_events_ops_join.py  test_events_utils.py  test_fieldmap_intended_rel.py  test_fieldmap_sbref_ignored.py  test_fieldmap_ties.py  test_filters.py  test_functional.py  test_functional_dir_from_json.py  test_functional_rest.py  test_functional_rest_only.py  test_functional_sbref.py  test_functional_sbref_multi_run.py  test_init_dataset.py  test_loader_two_yaml.py  test_logging_cli.py  test_mcflirt_pipeline.py  (+17 more)
code/MyBidsApp/cbrain_bids_pipeline/: README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
code/MyBidsApp/cbrain_bids_pipeline/bids_cbrain_runner/: __init__.py  cli.py
code/MyBidsApp/cbrain_bids_pipeline/bids_cbrain_runner/api/: __init__.py  client.py  client_openapi.py  config_loaders.py  session.py
code/MyBidsApp/cbrain_bids_pipeline/bids_cbrain_runner/commands/: __init__.py  alias.py  bids_sftp_checker.py  bids_validator.py  data_providers.py  download.py  groups.py  sftp.py  tool_launcher.py  tools.py  upload.py  userfiles.py
code/MyBidsApp/cbrain_bids_pipeline/bids_cbrain_runner/utils/: __init__.py  bids_style.py  cli_utils.py  compare.py  custom_output.py  download_utils.py  filetypes.py  local_files.py  logging_config.py  metadata.py  output.py  path_normalization.py  paths.py  progress.py  task_builder.py
code/MyBidsApp/cbrain_bids_pipeline/tests/: conftest.py  test_alias.py  test_build_remote_path.py  test_cli_delete_userfiles.py  test_cli_download_alias.py  test_cli_download_error.py  test_cli_download_id.py  test_cli_download_only_dirs.py  test_cli_download_spinner.py  test_cli_error_recover_tasks.py  test_cli_group_id.py  test_cli_launch_tool_error.py  test_cli_list_userfiles.py  test_cli_modify_file.py  test_cli_retry_tasks.py  test_cli_task_status.py  test_cli_upload_custom_path.py  test_cli_upload_normalize_paths.py  test_cli_upload_strip.py  test_client_operate_tasks.py  test_client_userfiles.py  test_config_loading.py  test_create_group.py  test_create_task_error.py  test_delete_userfile_dry_run.py  test_download_flatten.py  test_download_only_dirs.py  test_download_wrapper.py  test_ensure_remote_dir_structure.py  test_error_recover_failed_tasks.py  test_error_recover_task_operation.py  test_filetypes.py  test_http_timeout.py  test_launch_tool_params.py  test_list_tasks_by_group.py  test_naive_download.py  test_resolve_output_dir.py  test_retry_failed_tasks.py  test_retry_task_operation.py  test_runner_generatedby.py  (+3 more)
code/MyBidsApp/dicomatic/: README.md  pyproject.toml  requirements.txt  setup.py
code/MyBidsApp/dicomatic/dicomatic/: __init__.py  cli.py  config_loader.py  models.py
code/MyBidsApp/dicomatic/dicomatic/bids/: __init__.py  filters.py  planner.py
code/MyBidsApp/dicomatic/dicomatic/commands/: _shared.py  bids.py  download.py  metadata.py  patients.py  query.py
code/MyBidsApp/dicomatic/dicomatic/config/: config.yaml
code/MyBidsApp/dicomatic/dicomatic/query/: __init__.py  builder.py  findscu.py  parser.py
code/MyBidsApp/dicomatic/dicomatic/utils/: __init__.py  auth.py  bids_helpers.py  cli_parse.py  display.py  download_helpers.py  input_helpers.py  metadata.py  naming.py  plan_builder.py  planning.py  project_root.py  prompts.py  reassign.py  session_map.py
code/MyBidsApp/dicomatic/tests/: __init__.py  test_cli_parse.py  test_cli_root.py  test_naming.py  test_patients.py  test_planning.py  test_prompt_sessions.py  test_session_map.py  test_shared.py
(+145 files in other folders)
